tests/NormalTests/paczka1/fuzzy1/84144128.err
Error in line 2: A60 A646 94,3
Error in line 4: v6MwtA A60 78,9
Error in line 15: A60 A646 24,1
Error in line 22: 7cxG4lCa A60 50,1
Error in line 25: v6MwtA A60 28,6
Error in line 33: WICrJ3phvm S367 36,9
Error in line 37: WICrJ3phvm A646 60,8
